# LannoLeave

./: .gitignore  README.md  materiaal.md  qlc_demo_reverse.qxw  strengths.md
firmware/: CMakeLists.txt  README.md
firmware/Lannooleaf/: CMakeLists.txt  README.md  controller.cpp  leaf.cpp  main.cpp
firmware/Lannooleaf/include/: controller.h  controller.hpp  leaf.h  leaf.hpp
firmware/baseclasses/: CMakeLists.txt
firmware/baseclasses/communication/: buffered_communicator.cpp
firmware/baseclasses/communication/include/: addressed_communicator.hpp  buffered_communicator.hpp
firmware/baseclasses/handlers/: command_handler.cpp  packet_handler.cpp
firmware/baseclasses/handlers/include/: command_handler.hpp  packet.hpp  packet_handler.hpp  updatable.hpp
firmware/baseclasses/hardware/: i2c.cpp  spi.cpp
firmware/baseclasses/hardware/include/: i2c.hpp  spi.hpp
firmware/controller/: CMakeLists.txt  controller.cpp  main.cpp
firmware/controller/include/: controller.h
firmware/datastructures/: CMakeLists.txt  graph.cpp
firmware/datastructures/include/: graph.hpp
firmware/docs/: Doxyfile.in  README.md
firmware/docs/Doxygen/: .gitignore  Doxyfile.cfg
firmware/docs/Sphinx/: .gitignore  pyproject.toml
firmware/docs/Sphinx/source/: conf.py  index.rst
firmware/docs/Sphinx/source/api/: classLannooleaf_1_1CommandHandler.rst  classLannooleaf_1_1Controller.rst  classLannooleaf_1_1Graph.rst  classLannooleaf_1_1I2CMaster.rst  classLannooleaf_1_1I2CSlave.rst  classLannooleaf_1_1I2c__slave.rst  classLannooleaf_1_1Leaf.rst  classLannooleaf_1_1PacketHandler.rst  classLannooleaf_1_1SPISlave.rst  classLannooleaf_1_1Spi__slave.rst  classLannooleaf_1_1baseclasses_1_1AddressedCommunicator.rst  classLannooleaf_1_1baseclasses_1_1BufferedCommunicator.rst  classLannooleaf_1_1baseclasses_1_1I2C.rst  classLannooleaf_1_1baseclasses_1_1SPI.rst  classLannooleaf_1_1interfaces_1_1IUpdatable.rst  classLannooleaf_1_1slave.rst  class_view_hierarchy.rst.include  define_helper__funcs__var_8h_1a1630d697270d94a6c16d638197bfad02.rst  (+180 more)
firmware/docs/doxy/html/: annotated.html  classLannoLeaf_1_1Controller-members.html  classLannoLeaf_1_1Controller.html  classLannoLeaf_1_1I2CMaster-members.html  classLannoLeaf_1_1Leaf-members.html  classLannoLeaf_1_1Leaf.html  classLannoLeaf_1_1Spi__command__handler-members.html  classLannoLeaf_1_1Spi__command__handler.html  classLannoLeaf_1_1Spi__slave-members.html  classLannoLeaf_1_1Spi__slave.html  classLannoLeaf_1_1spi__slave-members.html  classLannoLeaf_1_1spi__slave.html  classes.html  commands_8h_source.html  controller_8h_source.html  dir_027562381e5e285c8b5b81c9c3dfaa06.html  dir_14d70d26dddf882023fb9a29a126a1c7.html  dir_288a6c11b9990ee11d9a602714203108.html  dir_486ae43764ae9f20e4dadb1d9a35a1c3.html  dir_53db99b5a18158138c2cabf82b6d091f.html  dir_5f6abbfc1ee3657bd8cd421d6253e179.html  dir_783257880aebd39c28b1b1d13dffaf98.html  dir_8329274ffd6ff6a1f5713242fce252ef.html  dir_8474af6d0976fd8f0d49d191f152b5ba.html  dir_966d48f588a2ecb6e097da2bdfeba0e2.html  dir_ac096e079d6f54132927f56805cf33d8.html  dir_ad5279d1b6fd5976001feccf8f8106f5.html  dir_b212571994f72c853595f1550fe13b4a.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_de57b01abe8905fbf8ef687fcf392863.html  dir_e19b519b93035562e525a258ff55e0da.html  dir_f96608aeaf27a9db6a547b2b1c4e4b8a.html  files.html  functions_func.html  graph_8h_source.html  helper__funcs__var_8h_source.html  i2c__master_8h_source.html  index.html  leaf_8h_source.html  md__home_joey_Documents_School_2021_2022_2_Projectweek_LannoLeave_firmware_readme.html  (+8 more)
firmware/docs/doxy/latex/: annotated.tex  classLannoLeaf_1_1Controller.tex  classLannoLeaf_1_1Leaf.tex  classLannoLeaf_1_1Spi__command__handler.tex  classLannoLeaf_1_1Spi__slave.tex  classLannoLeaf_1_1spi__slave.tex  commands_8h_source.tex  controller_8h_source.tex  files.tex  graph_8h_source.tex  helper__funcs__var_8h_source.tex  i2c__master_8h_source.tex  index.tex  leaf_8h_source.tex  refman.tex  spi__command__handler_8h_source.tex  spi__slave_8h_source.tex  structLannoLeaf_1_1message.tex  structLannoLeaf_1_1msg__buff.tex  structLannoLeaf_1_1packet.tex  structLannoLeaf_1_1uart__packet.tex
firmware/hardware/: CMakeLists.txt  i2c_master.cpp  i2c_slave.cpp  spi_slave.cpp
firmware/hardware/include/: i2c_master.hpp  i2c_slave.hpp  spi_slave.hpp
firmware/helpers/: CMakeLists.txt  command_handler.cpp  graph.cpp  helper_funcs_var.cpp  i2c_master.cpp  i2c_slave.cpp  spi_slave.cpp
firmware/helpers/command_handler/: CMakeLists.txt  command_handler.cpp
firmware/helpers/command_handler/include/: command_handler.h
firmware/helpers/graph/: README.md  graph.cpp
firmware/helpers/graph/include/: graph.h
firmware/helpers/helpers/: CMakeLists.txt  helper_funcs_var.cpp
firmware/helpers/helpers/include/: commands.h  helper_funcs_var.h
firmware/helpers/i2c_master/: CMakeLists.txt  i2c_master.cpp
firmware/helpers/i2c_master/include/: i2c_master.h
firmware/helpers/include/: command_handler.h  commands.h  commands.hpp  graph.h  helper_funcs_var.h  helper_funcs_var.hpp  i2c_master.h  i2c_slave.h  spi_slave.h
firmware/helpers/pixel_mapping/: CMakeLists.txt  README.md  pixel_mapping.cpp
firmware/helpers/pixel_mapping/include/: pixel_mapping.h
firmware/helpers/spi_command_handler/: CMakeLists.txt  spi_command_handler.cpp
firmware/helpers/spi_command_handler/include/: spi_command_handler.h
firmware/helpers/spi_slave/: CMakeLists.txt  spi_slave.cpp
firmware/helpers/spi_slave/include/: spi_slave.h
firmware/leaf/: CMakeLists.txt  leaf.cpp  main.cpp
firmware/leaf/include/: leaf.h
firmware/libs/i2c_slave/: CMakeLists.txt  i2c_slave_lib.c
firmware/libs/i2c_slave/include/: i2c_slave_lib.h
software/controller/: CMakeLists.txt  controller.cpp  main.cpp
software/controller/include/: controller.h
software/libs/PicoLed/: CMakeLists.txt
(+348 files in other folders)
