[tool.poetry]
name = "Lannooleaf"
version = "0.1.0"
description = ""
authors = ["Joey <joey@de-smet.vlaanderen>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
exhale = "^0.3.1"
breathe = "^4.33.1"
sphinx-book-theme = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
